# autago

./: .gitignore  README.md  main.py  pyproject.toml
config/: default.yaml
core/: agent.py  cli.py  config.py  cost.py  dataset.py  embedding.py  experiment.py  graph.py  llm.py  logger.py  memory.py  metrics.py  prompts.py  task.py
